--- a/Spotify-Clone/style.css
+++ b/Spotify-Clone/style.css
@@ -59,6 +59,7 @@ body{
 }
 .right{
   margin: 16px 0;
+    padding-bottom: 80px;
 }
 .header{
   display: flex;
@@ -141,4 +142,22 @@ max-height: 65vh;
 .loginbtn:hover{
   font-weight: bold;
   font-size: 16px;
+}
+
+.playbar{
+  position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: aquamarine;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.songbuttons{
+  display: flex;
+    justify-content: center;
+    gap: 16px;
 }
