--- a/Mordern-WebSite/style.css
+++ b/Mordern-WebSite/style.css
@@ -64,11 +64,88 @@ html, body{
   letter-spacing: -1px;
 }
 #homelast{
-  padding~: 5vw 15vw;
+  padding: 5vw 15vw;
 }
 #homelast p{
   font-size: 1.6vw;
   font-weight: 400;
   letter-spacing: -.08vw;
   outline-color: #000;
+}
+#homelast p::selection{
+  color: #fff;
+  background-color: #000;
+}
+#featured{
+  padding: 10vw 15vw;
+}
+.fheading h1{
+  line-height: 1;
+  font-size: 3vw;
+  font-weight: 400;
+}
+.fheading>h1:nth-child(2){
+  color: transparent;
+  -webkit-text-stroke: 1px black;
+}
+#fimages{
+width: 100%;
+display: flex;
+justify-content: space-between;
+height: 100vh;
+margin-top: 5vw;
+}
+#fleft {
+  overflow: hidden;
+  width: 45%;
+  height: inherit;
+}
+.fleftelm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: inherit;
+}
+.fleftelm h1{
+  font-size: 2.5vw;
+  line-height: 1;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin: 1.5vw 0;
+}
+.fleftelm h3 {
+  font-size: 1.3vw;
+  font-weight: 400;
+}
+.fleftelm h4{
+  opacity: .5;
+}
+
+#fright {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 45%;
+  height: inherit;
+}
+#fright .images{
+  width: 90%;
+  height: 90%;
+  background-color: aqua;
+}
+#btndiv{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#btndiv button{
+  padding: 1.3vw 2.5vw;
+  border-radius: 100px;
+  border: 2px solid #d7d5d5;
+  background-color: #fff;
+  font: 1vw;
+  font-weight: 500;
+  letter-spacing: 1px;
+
 }
