--- a/Mordern-WebSite/style.css
+++ b/Mordern-WebSite/style.css
@@ -7,6 +7,10 @@
     sans-serif;
   box-sizing: border-box;
 }
+*::selection {
+  color: #fff;
+  background-color: #000;
+}
 html, body{
   width: 100%;
   height: 100%;
@@ -134,12 +138,12 @@ margin-top: 5vw;
   height: 90%;
   background-color: aqua;
 }
-#btndiv{
+.btndiv{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#btndiv button{
+.btndiv button{
   padding: 1.3vw 2.5vw;
   border-radius: 100px;
   border: 2px solid #d7d5d5;
@@ -148,4 +152,51 @@ margin-top: 5vw;
   font-weight: 500;
   letter-spacing: 1px;
 
+}
+#dev{
+  width: 100%;
+  padding: 5vw 15vw;
+}
+#dev h1{
+  font-size: 3.8vw;
+  font-weight: 400;
+  width: 50%;
+  line-height: 1;
+}
+#dev p{
+  font-size: 1.5vw;
+  margin-top: 3vw;
+  letter-spacing: -.5px;
+  width: 50%;
+}
+#slides{
+  padding: 3vw 10vw;
+  display: flex;
+  justify-content: space-evenly;
+}
+.slide{
+  width: 30%;
+}
+.slide .img{
+  width: 100%;
+  height: 270px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.slide .img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.slide .tag{
+  width: fit-content;
+  border-radius: 100px;
+  padding: 10px 22px;
+  background-color: #f7f7f7;
+  margin: 20px 0;
+}
+.slide h3{
+  font-size: 1.4vw;
+  font-weight: 400;
+  letter-spacing: -.5px;
 }
