--- a/Mordern-WebSite/style.css
+++ b/Mordern-WebSite/style.css
@@ -19,6 +19,19 @@ html, body{
   width: 100%;
   background-color: #fff;
 }
+.cursor{
+  width: 20px;
+    height: 20px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    mix-blend-mode: difference;
+    position: fixed;
+    pointer-events: none;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+    transition: width 0.2s ease, height 0.2s ease, background-color 0.2s ease;
+}
+
 #home{
   width: 100%;
   min-height: 100vh;
@@ -45,6 +58,37 @@ html, body{
   font-size: 1.2vw;
   letter-spacing: 1px;
 }
+.menu-btn {
+  position: relative;
+  z-index: 10;
+  transition: color 0.3s ease;
+}
+
+.menu-btn svg path {
+  stroke: black;
+  transition: stroke 0.3s ease;
+}
+.menu-btn svg {
+  mix-blend-mode: difference;
+}
+
+.magnet-bg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  height: 80px;
+  background-color: black;
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  z-index: -1;
+  /* behind the button */
+  transition: opacity 0.3s ease;
+
+}
+
 #home #homemain{
   width: 100%;
   padding: 15vw 15vw;
@@ -53,6 +97,9 @@ html, body{
   font-weight: 4500;
   letter-spacing: -.5px;
   font-size: 1.5vw;
+}
+#homemain .headings h1:hover{
+  color: #000;
 }
 .headings{
   display: flex;
@@ -138,6 +185,11 @@ margin-top: 5vw;
   height: 90%;
   background-color: aqua;
 }
+#fright .images img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .btndiv{
   display: flex;
   align-items: center;
@@ -199,4 +251,7 @@ margin-top: 5vw;
   font-size: 1.4vw;
   font-weight: 400;
   letter-spacing: -.5px;
+}
+.magnet:hover {
+  transform: scale(1.1);
 }
